--- a/static/css/overlay.css
+++ b/static/css/overlay.css
@@ -7,7 +7,7 @@
 	height: 251px;
 	padding-top: 35px;
 	margin: auto;
-
+	border: 3px solid #ccc;
     /* CSS3 styling for latest browsers */	 
     //-moz-box-shadow:0 0 90px 5px #000; 
     //-webkit-box-shadow: 0 0 90px #000;
