--- a/static/css/2stylez.css
+++ b/static/css/2stylez.css
@@ -195,7 +195,7 @@ margin: auto;
 	padding-bottom: 16px;
 }*/
 #attendees_thumbs{
-	padding-left: 10px;
+	padding: 0px 0px 0px 10px;
 	}
 /*******************************/
 /****    content-right      ****/
