--- a/core/templates/campaign_edit.html
+++ b/core/templates/campaign_edit.html
@@ -93,9 +93,13 @@
 				<label for="campaign_message_share">Message Displayed During Share: </label> 
 				<textarea rows="6" cols="40"  name="campaign_message_share">{{campaign.message_share}}</textarea>
 			</li>
+			 <li>
+				<label for="url">information URL on landing page: </label> 
+				<input type="text" value="{{campaign.url}}" size="60" name="url" />
+			</li>
 			<li>
 				<label for="url_redeem">redeem promotion URL: </label> 
-				<input type="text" value="{{campaign.url}}" size="60" name="url_redeem" />
+				<input type="text" value="{{campaign.url_redeem}}" size="60" name="url_redeem" />
 			</li>
                          <li>
 				Campaign Created At:  {{campaign.created_at}}
