--- a/core/templates/campaign_page.html
+++ b/core/templates/campaign_page.html
@@ -132,7 +132,7 @@
 			</div>      	
 			
 			<div id="code"><p style="width: 60%; margin: auto;text-align: center; border: 6px outset #0074A0; padding-bottom: 10px; ">{{campaign.code}}</p><br/>
-			  <font style="font-size:18px;">&nbsp;&nbsp;&nbsp;Redeem Here: &nbsp;<a href="{{campaign.url}}">{{campaign.url}}</a></font></div>
+			  <font style="font-size:18px;">&nbsp;&nbsp;&nbsp;Redeem Here: &nbsp;<a href="{{campaign.url_redeem}}">{{campaign.url_redeem}}</a></font></div>
 
 	</div>
 
