--- a/core/templates/campaign_page.html
+++ b/core/templates/campaign_page.html
@@ -175,10 +175,10 @@ function refreshAttendee()
 	$.getJSON('{% url attendees_list campaign_id=campaign.id %}', function(data){
 		$.each(data, function(index, attendee) {
                         if (attendee[3] == "facebook") {
-			attendee_list += '<img height="44px" style="margin-bottom: 5px; border: 3px solid blue;" src= "'+attendee[0]+'">&nbsp&nbsp&nbsp;';
+			attendee_list += '<a target="facebook_' + attendee[2] + '" href="http://www.facebook.com/' +  attendee[2]  + '"><img height="44px" style="margin-bottom: 5px; border: 3px solid blue;" src= "'+attendee[0]+'"></a>&nbsp&nbsp&nbsp;';
                         }
                         else {
-                        attendee_list += '<img height="44px" style="margin-bottom: 5px; border: 3px solid green;" src= "'+attendee[0]+'">&nbsp&nbsp&nbsp;';
+                        attendee_list += '<a target="twitter_' + attendee[2] + '" href="http://twitter.com/' +  attendee[2]  + '"> <img height="44px" style="margin-bottom: 5px; border: 3px solid green;" src= "'+attendee[0]+'"> </a>&nbsp&nbsp&nbsp;';
                         } 
 			if ((index+1) % 7==0 && index != 0)
 			{
