Adding facebook and twitter data for campaign.

--- a/core/templates/campaign_edit.html
+++ b/core/templates/campaign_edit.html
@@ -101,6 +101,14 @@
 				<label for="url_redeem">redeem promotion URL: </label> 
 				<input type="text" value="{{campaign.url_redeem}}" size="60" name="url_redeem" />
 			</li>
+			<li>
+				<label for="twitter">Twitter Account Follow: </label> 
+				<input type="text" value="{{campaign.twitter_account}}" size="60" name="twitter_account" />
+			</li>
+			<li>
+				<label for="facebook_fan">Facebook Fan: </label> 
+				<input type="text" value="{{campaign.facebook_fan_page}}" size="60" name="facebook_fan" />
+			</li>
                          <li>
 				Campaign Created At:  {{campaign.created_at}}
 			</li>
