--- a/core/templates/campaign_page.html
+++ b/core/templates/campaign_page.html
@@ -195,7 +195,7 @@ function refreshAttendee()
 
 refreshAttendee();
 
-//$("#ifra").showLoading({'afterShow': function(){ setTimeout( "jQuery('#ifra').hideLoading()", 5000 );}});         
+$("#ifra").showLoading({'afterShow': function(){ setTimeout( "jQuery('#ifra').hideLoading()", 5000 );}});         
 
 
 $("#badge").click(function(){
