--- a/static/css/create.css
+++ b/static/css/create.css
@@ -83,7 +83,8 @@ height: 30px;
               font-weight: bold;
 
 	      width: 80%;
-	      height: 50px;
+	      height: 40px;
+              margin: 0 0 130px 0;
 }
 #create-button {
 	       height: 40px;
