--- a/static/css/create.css
+++ b/static/css/create.css
@@ -82,9 +82,9 @@ height: 30px;
               color: #E0E0E0; 
               font-weight: bold;
 
-	      width: 70%;
+	      width: 65%;
 	      height: 50px;
-              margin: 0 0 130px 0;
+              margin: 0 50px 130px 0;
 }
 #create-button {
 	       height: 40px;
