--- a/static/css/create.css
+++ b/static/css/create.css
@@ -89,7 +89,7 @@ height: 30px;
 #create-button {
 	       height: 40px;
 	       width: 15%;
-	       margin: 0 0 130px 20;
+	       margin: 0 0 130px 20px;
 }
 
 div#create-campaign {
