--- a/core/templates/site_base.html
+++ b/core/templates/site_base.html
@@ -19,16 +19,16 @@
 
     <script type="text/javascript">
 
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-10568190-7']);
-  _gaq.push(['_setDomainName', '.collectivevip.com']);
-  _gaq.push(['_trackPageview']);
-
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
+  //var _gaq = _gaq || [];
+  //_gaq.push(['_setAccount', 'UA-10568190-7']);
+  //_gaq.push(['_setDomainName', '.collectivevip.com']);
+  //_gaq.push(['_trackPageview']);
+  //
+  //(function() {
+  //  var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+  //  ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+  //  var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  //})();
 
     </script>
   </head>
