Adding soem features for randomly picking winners.

--- a/analytics/templates/analytics.html
+++ b/analytics/templates/analytics.html
@@ -35,7 +35,7 @@ Analytics
 			<!-- Nav bar -->
 			<div id="panelNav" class="span-24 last">
 				<div id="selectDiv" class="span-16">
-					<span>Campaign: </span><span id="selectCampaign">BlogWorld</span>
+					<span>Campaign: </span><span id="selectCampaign">{{campaign.title}}</span>
 				</div>
 				<div id="dateDiv" class="span-8 last">
 				     <select id="chart-date-type">
