--- a/core/templates/campaign_admin.html
+++ b/core/templates/campaign_admin.html
@@ -40,14 +40,15 @@ Email Details To Self
 <div id="winners" class="create" style="text-align:center">
   <h2>Pick Raffle Winners:<button style="" id="winners-button">Click Here</button></h2>
 <br/>
+<div id="winners-wrapper" style="display: none;">
 <div id="choose-winners">
     <div id="choose-number-winners">Number of Winners: 
              <input type="text" id="number-of-winners" value="1" name="number-of-winners" size="2"/> 
              <button id="random-select-winners">Select Winners</button></div>
 </div>
-
 <div id="winner-selection"></div>
 
+</div>
 </div>
 
 <script>
@@ -75,11 +76,11 @@ $("#random-select-winners").click(function(){
 });
 
 $("#winners-button").click(function(){
-if ($("#choose-winners").is(":hidden")) {
-    $("#choose-winners").slideDown("slow");
+if ($("#winners-wrapper").is(":hidden")) {
+    $("#winners-wrapper").slideDown("slow");
     $("#winners-button").html("Hide");
 } else {
-    $("#choose-winners").slideUp("slow");
+    $("#winners-wrapper").slideUp("slow");
     $("#winners-button").html("Click Here");
 }
 });
