--- a/core/templates/campaign_admin.html
+++ b/core/templates/campaign_admin.html
@@ -44,10 +44,14 @@ Email Details To Self
 <div id="choose-winners">
     <div id="choose-number-winners">Number of Winners: 
              <input type="text" id="number-of-winners" value="1" name="number-of-winners" size="2"/> 
-             <button id="random-select-winners">Select Winners</button></div>
+             <button id="random-select-winners">Select Winners</button>
+	     <button id="random-select-hide" style="display: none;">Hide Winners</button>
+    </div>
 </div>
-<div id="winner-selection"></div>
-
+<div id="winner-selection">
+      <ul id="winners-list">
+      </ul>
+</div>
 </div>
 </div>
 
@@ -57,22 +61,40 @@ $("#random-select-winners").click(function(){
         $.ajax({
 		url: '{% url ajax_select_winners %}?campaign={{campaign.id}}', 
 		dataType: "json",
-		data: {number: $("number-of-winners").val()},
+		data: {total_number: $("#number-of-winners").val(),
+                       current_number: $("#winners-list").children().size()
+                      },
 		success: function(data) {
+                        $("#winners-list").html(""); 
+                        $.each(data.winners, function(index, value) { 
+                            alert(value.profile_pic);
+                            $("#winners-list").append("<li>" + value.name + " &nbsp;&nbsp;&nbsp; <img src='" + value.profile_pic + "' /></li>"); 
+                        });
+ 
                         jQuery('#choose-winners').hideLoading();
+                      
 			
                 if ($("#winner-selection").is(":hidden")) {
+                    $("#random-select-hide").show();
                     $("#winner-selection").slideDown("slow");
-                    $("#random-select-winners").html("Hide Winners");
-                } else {
-                    $("#winner-selection").slideUp("slow");
-                    $("#random-select-winners").html("Select Winners");
-                }
+                    $("#random-select-winners").html("Refresh");
+                } 
+                  			
 		},
 		beforeSend: function() {
                        $("#choose-winners").showLoading();
 		}
 	});
+});
+
+$("#random-select-hide").click( function() {
+          if ($("#winner-selection").is(":hidden")) {
+                    $("#winner-selection").slideDown("slow");
+                    $("#random-select-hide").html("Hide Winners");
+                } else {
+                    $("#winner-selection").slideUp("slow");
+                    $("#random-select-hide").html("Show Winners");
+                }
 });
 
 $("#winners-button").click(function(){
