--- a/static/css/campaign_admin.css
+++ b/static/css/campaign_admin.css
@@ -58,17 +58,39 @@ div#choose-winners {
 
 div#winner-selection {
     border:1px solid #ccc; 
-    #height:100px; 
     display:none;
+}
+div#error-message {
+    border:1px solid #ccc; 
+    display:none;
+    color: red;
+    font-size: 20px;
 }
 
 ul#winners-list {
+    padding: 0;
 }
 
 ul#winners-list li{
+                margin: 0;
 		background-color: silver;
 		height: 60px;
-		font-size: 20px;
+		font-size: 40px;
+        	border: 2px solid #CCFF99;	
+                margin: 10px 50px 10px 50px;
+                
 }
 
+ul#winners-list img.winner-logo{
+        	margin: 0 30px 5px 0; 
+                height: 50px;	
+}
 
+ul#winners-list img.close-winner-logo{
+                height: 60px;
+                cursor: pointer;	
+}
+
+ul#winners-list li.image{
+                float: right;
+}
