--- a/core/templates/campaign_page.html
+++ b/core/templates/campaign_page.html
@@ -481,7 +481,7 @@ function resizeIframe() {
     document.getElementById('ifra').style.height = height + 'px';
 }
 //document.getElementById('ifm').onload=resizeIframe;
-window.onresize = resizeIframe;
+//window.onresize = resizeIframe;
 
 </script>
 <script type="text/javascript" src="{% url static 'javascript/jquery.animate-shadow.js' %}" ></script>
