Adding widget stuff.

--- a/core/templates/campaign_admin.html
+++ b/core/templates/campaign_admin.html
@@ -26,6 +26,9 @@ Analytics: &nbsp;&nbsp;&nbsp;&nbsp;<a target="analytics" href="{{analytics_url}}
 <li>
 Edit: &nbsp;&nbsp;&nbsp;&nbsp;<a target="edit" href="{{update_url}}">{{update_url}}</a><br/>
 </li>
+<li>
+Launch: &nbsp;&nbsp;&nbsp;&nbsp;<a target="launch" href="{{launch_url}}">{{launch_url}}</a><br/>
+</li>
 </ul>
 </div>
 
