--- a/core/templates/campaign_page.html
+++ b/core/templates/campaign_page.html
@@ -143,7 +143,7 @@
 
 
 	<br/><br/>
-	<div id="attendees_thumbs" style="overflow: auto;">
+	<div id="attendees_thumbs">
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		{% for attendee in attendees %} 
 
